ex1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex11-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex11
  template:
    metadata:
      labels:
        app: ex11
    spec:
      volumes:
        - name: shared-log
          # emptyDir: {}
          persistentVolumeClaim: # DONE:
            claimName: ex11-claim
      containers:
        - name: pingpong
          image: usb9/pingpong:ver1.11
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
        - name: logoutput
          image: usb9/logoutput:ver3
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
