ex1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex11-svc
spec:
  type: ClusterIP
  selector:
    app: ex11
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
